# LasecSimul

./: .gitignore  README.md  package.json
.skill/: lasecsimul.skill
.spec/: lasecsimul-native-devices.spec  lasecsimul-subcircuits.spec  lasecsimul-wasm-devices.spec  lasecsimul.spec
core/: CMakeLists.txt  CMakePresets.json
core/include/lasecsimul/: IComponentModel.hpp  IMcuAdapter.hpp  QemuModule.hpp  Types.hpp  device_abi.h  mcu_abi.h  qemu_arena_abi.h
core/src/: main.cpp
core/src/app/: CoreApplication.cpp  CoreApplication.hpp
core/src/components/: SimulideBuiltins.hpp
core/src/components/active/: Diode.hpp
core/src/components/connectors/: Junction.hpp  Tunnel.hpp
core/src/components/logic/: Button.hpp
core/src/components/meters/: Ampmeter.hpp  FreqMeter.hpp  LogicAnalyzer.hpp  Oscope.hpp  Probe.hpp
core/src/components/other/: Ground.hpp
core/src/components/passive/: Capacitor.cpp  Capacitor.hpp  Inductor.cpp  Inductor.hpp  Resistor.hpp
core/src/components/sources/: Battery.hpp  Clock.hpp  Csource.hpp  CurrSource.hpp  DcVoltageSource.hpp  FixedVolt.hpp  Rail.hpp  VoltSource.hpp  WaveGen.hpp
core/src/ipc/: IpcServer.cpp  IpcServer.hpp  Protocol.hpp
core/src/mcu/: McuComponent.cpp  McuComponent.hpp  McuController.cpp  McuController.hpp
core/src/mcu/esp32/: Esp32Adapter.cpp  Esp32Adapter.hpp  Esp32GpioModule.hpp  Esp32MemoryMap.hpp
core/src/mcu/qemu/: FirmwareWatcher.cpp  FirmwareWatcher.hpp  QemuArenaBridge.cpp  QemuArenaBridge.hpp  QemuArenaTypes.hpp  QemuProcessManager.cpp  QemuProcessManager.hpp
core/src/plugins/: CrashGuard.cpp  CrashGuard.hpp  GlobalPluginCache.hpp  NativeDeviceProxy.cpp  NativeDeviceProxy.hpp  NativeMcuAdapterProxy.cpp  NativeMcuAdapterProxy.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginModule.cpp  PluginModule.hpp  PluginRuntime.cpp  PluginRuntime.hpp  PluginWatchdog.hpp
core/src/registry/: ComponentMetadataRegistry.hpp  ComponentParams.hpp  ComponentRegistry.hpp  McuRegistry.hpp  SubcircuitRegistry.hpp
core/src/session/: SimulationSession.cpp  SimulationSession.hpp
core/src/simulation/: CircuitGroup.hpp  ComponentMatrixView.hpp  MnaSolver.hpp  Netlist.hpp  Scheduler.cpp  Scheduler.hpp  SparseSet.hpp  UnionFind.hpp
core/test/: component_removal_test.cpp  diode_test.cpp  simulide_sources_meters_test.cpp  subcircuit_test.cpp  voltage_divider_test.cpp
core/test/core/: CoreBootstrapTest.cpp
core/test/core/mcu/: Esp32AdapterTest.cpp  FirmwareWatcherTest.cpp  McuComponentTest.cpp  McuControllerRealQemuTest.cpp  QemuArenaBridgeTest.cpp  QemuProcessManagerTest.cpp
core/test/core/plugins/: PluginLoaderTest.cpp  PluginRuntimeTest.cpp  PluginWatchdogTest.cpp
core/test/core/session/: PinChangeDispatchTest.cpp
core/test/core/simulation/: CircuitGroupTest.cpp  MnaSolverTest.cpp
core/test/fixtures/plugins/: README.md
devices/: library.json
devices/example-blinker/: CMakeLists.txt  device.json
devices/example-blinker/src/: lib.c
devices/simulide-complex/: CMakeLists.txt  aip31068_i2c.json  audio_out.json  bjt.json  diac.json  gc9a01a.json  hd44780.json  ili9341.json  jfet.json  ks0108.json  max72xx_matrix.json  mosfet.json  pcd8544.json  pcf8833.json  scr.json  servo.json  sh1107.json  ssd1306.json  st7735.json  st7789.json  transformer.json  triac.json  ws2812.json
devices/simulide-complex/src/: lib.c
devices/voltmeter/: CMakeLists.txt  device.json  device.lsconfig
devices/voltmeter/src/: lib.c
docs/: 00-visao-geral.md  01-arquitetura-operacional.md  02-roadmap-mvp.md  03-plano-de-execucao.md  04-divisao-por-agentes.md  05-contratos-e-interfaces.md  06-core-cpp.md  07-extension-typescript.md  08-ui-webview.md  09-componentes-passivos.md  10-netlist-scheduler-mna.md  11-qemu-esp32.md  12-plugins-nativos.md  13-testes.md  14-integracao-final.md  15-taxonomia-paleta.md  16-roadmap-pendencias-spec.md  17-pendencias-pos-sessao-qemu-abi.md  mvp-limitacoes.md
docs/adr/: 0001-extension-ts-core-cpp.md  0002-dispositivos-nativos-vs-wasm.md  0003-mcus-via-qemu.md  0004-ipc-extension-core.md  0005-solver-mna-eigen.md  0006-instrumentos-como-plugin-abi.md  0007-ui-desacoplada-protocolo-como-contrato.md  0008-subcircuitos-json-tunnel-sem-flattening.md  0009-localizacao-de-strings-declarativas.md
examples/: mvp-passive.lsproj
extension/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.webview.json
extension/src/: extension.ts  language.test.ts  language.ts
extension/src/catalog/: UnifiedCatalog.test.ts  UnifiedCatalog.ts  catalogMerge.test.ts  catalogMerge.ts  symbolAuthoring.test.ts  symbolAuthoring.ts
extension/src/ipc/: CoreClient.test.ts  CoreClient.ts  CoreProcess.ts  protocol.js  protocol.ts  types.ts
extension/src/project/: ProjectSerializer.ts  ProjectTypes.ts
extension/src/trust/: TrustStore.ts  trustDecision.test.ts  trustDecision.ts
extension/test/project/: ProjectSerializer.test.ts
mcu-adapters/: library.json
mcu-adapters/espressif-esp32/: CMakeLists.txt  device.lsconfig  mcu.json
mcu-adapters/espressif-esp32/src/: Esp32Adapter.cpp
project/schema/: component-catalog.json  lsproj.schema.json
scripts/: build-all.js  build-core.js  build-devices.js  build-extension.js  test-core.js
subcircuits/: esp32_devkitc_v4.lssub.json  esp32_devkitc_v4.lssub.json.lsconfig  esp32_wroom32.lssub.json  esp32_wroom32.lssub.json.lsconfig
tasks/: agent-01-estrutura-repositorio.md  agent-02-extension-host.md  agent-03-ipc-core-client.md  agent-04-core-bootstrap.md  agent-05-netlist.md  agent-06-scheduler.md  agent-07-mna-solver.md  agent-08-componentes-passivos.md  agent-09-ui-webview.md  agent-10-project-lsproj.md  agent-11-qemu-bridge.md  agent-12-esp32-adapter.md  agent-13-plugins-nativos.md  agent-14-testes.md  agent-15-integracao-final.md  agent-16-documentacao.md
test/: README.md
test/core/components/: LogicComponentsTest.cpp  PassiveComponentsTest.cpp
test/core/plugins/: PluginLoaderRealDllTest.cpp
test/core/simulation/: NetlistTest.cpp  SchedulerTest.cpp  SparseSetTest.cpp  UnionFindTest.cpp
test/fixtures/projects/: basic-passive.lsproj  empty.lsproj  (+1 more)
(+21 files in other folders)
